Use ActiveClusterSuffix object based comparison instead of byte Array comparison